#########################################################################
#  Project:		Qt Style Plugins for Qt6			#
#  Edit:		19-Mar-24					#
#########################################################################

project(qtstyleplugins6)

#########################################################################
#  The shared headers and static library				#
#########################################################################

add_subdirectory(shared)

#########################################################################
#  Styles								#
#########################################################################

add_subdirectory(plastique)
