#########################################################################
#  Project:		Qt Style Plugins for Qt6			#
#  Edit:		19-Mar-24					#
#########################################################################

project(qtstyleplugins6)

#########################################################################
#  Dependencies								#
#########################################################################

find_package(GTK2 2.0 COMPONENTS gtk)

#########################################################################
#  The shared headers and static library				#
#########################################################################

add_subdirectory(shared)

#########################################################################
#  Styles								#
#########################################################################

add_subdirectory(plastique)
add_subdirectory(motif)
add_subdirectory(cleanlooks)
if (GTK2_FOUND)
  add_subdirectory(gtk2)
endif (GTK2_FOUND)
